# Prediction-Engine

./: Cargo.toml  Dockerfile  README.md
ops/: docker-compose.yml  prometheus.yml
ops/grafana/dashboards/: prediction-engine.json
scripts/: diagnose_prices.py
src/: lib.rs  main.rs
src/config/: mod.rs
src/execution/: live.rs  mod.rs  paper.rs  traits.rs
src/market_data/: market_worker.rs  mod.rs  router.rs  types.rs
src/market_data/adapters/: kalshi.rs  mod.rs  polymarket.rs
src/market_data/adapters/polymarket/: clob.rs  mod.rs  types.rs  ws.rs
src/metrics/: mod.rs  prometheus.rs
src/state/: market.rs  market_cache.rs  mod.rs
src/strategy/: arbitrage.rs  market_maker.rs  mod.rs  traits.rs
