[package]
name = "prediction-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
once_cell = "1.21.3"
polymarket-rs="0.2.0"
kalshi = "0.9.0"
rust_decimal = "1.40"
dashmap = "6"
futures = "0.3"
metrics = "=0.22.4"  # Pinning to avoid breaking changes
metrics-exporter-prometheus = "=0.14.0"
async-trait = "0.1"
